Established basic look and feel for game board

--- a/components/aivsai/aivsai.template.html
+++ b/components/aivsai/aivsai.template.html
@@ -1,38 +1,8 @@
 <div>
 
+  <hxp-board></hxp-board>
+  
   <table>
-
-    <tr> <!--(Row 3)-->
-      <td class="dark tile">a3</td> <!-- cell a3 of main board -->
-      <td class="tile">b3</td> <!-- cell b3 of main board -->
-      <td class="dark tile">c3</td> <!-- cell c3 of main board -->
-
-      <td class="spacer" colspan="2" rowspan="3"></td> <!-- space between boards -->
-
-      <td class="dark tile">a3</td> <!-- cell a3 of AI's board -->
-      <td class="tile">b3</td> <!-- cell b3 of AI's board -->
-      <td class="dark tile">c3</td> <!-- cell c3 of AI's board -->
-    </tr>
-
-    <tr> <!--(Row 2)-->
-      <td class="tile">a2</td> <!-- cell a2 of main board -->
-      <td class="dark tile">b2</td> <!-- cell b2 of main board -->
-      <td class="tile">c2</td> <!-- cell c2 of main board -->
-
-      <td class="tile">a2</td> <!-- cell a2 of AI's board -->
-      <td class="dark tile">b2</td> <!-- cell b2 of AI's board -->
-      <td class="tile">c2</td> <!-- cell c2 of AI's board -->
-    </tr>
-
-    <tr> <!--(Row 1)-->
-      <td class="dark tile">a1</td> <!-- cell a1 of main board -->
-      <td class="tile">b1</td> <!-- cell b1 of main board -->
-      <td class="dark tile">c1</td> <!-- cell c1 of main board -->
-
-      <td class="dark tile">a1</td> <!-- cell a1 of AI's board -->
-      <td class="tile">b1</td> <!-- cell b1 of AI's board -->
-      <td class="dark tile">c1</td> <!-- cell c1 of AI's board -->
-    </tr>
 
     <tr>
       <td colspan="8">
