Tweaking UI for game board

--- a/components/huvshu/huvshu.template.html
+++ b/components/huvshu/huvshu.template.html
@@ -1,9 +1,10 @@
-<div id="game_screen">
+<div id="game-screen">
 
-  <a href="/hexapawn/hexapawn/#/">{{i18n.RETURN_TO_MAIN_MENU}}</a>
   
   <h1>{{i18n.APP_TITLE}}</h1>
   
-  <hxp-board gametype="huvshu" boardstate="boardState" moves="moves"></hxp-board>
+  <hxp-board gametype="huvshu" boardstate="boardState" moves="moves" playernames="playerNames"></hxp-board>
   
 </div>
+
+  <a href="/hexapawn/hexapawn/#/">{{i18n.RETURN_TO_MAIN_MENU}}</a>
