Added responsive UI breaks

--- a/components/huvshu/huvshu.template.html
+++ b/components/huvshu/huvshu.template.html
@@ -7,4 +7,4 @@
   
 </div>
 
-  <a href="/hexapawn/hexapawn/#/">{{i18n.RETURN_TO_MAIN_MENU}}</a>
+  <a href="/hexapawn/hexapawn/#/"><i class="material-icons">arrow_back</i>{{i18n.RETURN_TO_MAIN_MENU}}</a>
