--- a/css/hexapawn.css
+++ b/css/hexapawn.css
@@ -4,11 +4,13 @@
 
 html {
   min-height: 100%;
+  min-width: 16em;
 }
 
 body {
-  background: url(../assets/bg2.jpg) center center no-repeat;
-  background-color: #012a26;
+  background-color: #272621;
+  background: url(../assets/textures/seamless-wood3.jpg) center center repeat;
+
   color: #d4c900;
   font-family: Quattrocento;
   min-height: 100%;
@@ -24,9 +26,20 @@ h1, h2, h3, h4 {
 }
 
 #app_screen {
+  background: url(../assets/bg2.jpg) center center no-repeat;
+
   min-height: 100%;
+  /* width: 100%; */
   min-width: 100%;
   position: fixed;
+  /* padding: 1em; */
+  margin: 0em;
+  left: 0em;
+  top: 0em;
+}
 
+a i {
+  top: 0.25em;
+  position: relative;
 }
 
