--- a/components/huvshu/huvshu.template.html
+++ b/components/huvshu/huvshu.template.html
@@ -1,10 +1,10 @@
 <div id="game-screen">
 
-  
+
   <h1>{{i18n.APP_TITLE}}</h1>
-  
-  <hxp-board gametype="huvshu" boardstate="boardState" moves="moves" playernames="playerNames"></hxp-board>
-  
+
+  <hxp-board gametype="huvshu" gamedata="game"></hxp-board>
+
 </div>
 
-  <a href="/hexapawn/hexapawn/#/"><i class="material-icons">arrow_back</i>{{i18n.RETURN_TO_MAIN_MENU}}</a>
+<a href="/hexapawn/hexapawn/#/"><i class="material-icons">arrow_back</i>{{i18n.RETURN_TO_MAIN_MENU}}</a>
