--- a/components/setup/setup.template.html
+++ b/components/setup/setup.template.html
@@ -7,13 +7,13 @@
     <p><label>
         {{i18n.PLAYER_1_NAME}}<br>
         <i class="material-icons">face</i>
-        <input type="text" maxlength="32" ng-model="player1Name" required>
+        <input type="text" maxlength="32" ng-model="$parent.player1Name" required>
       </label></p>
 
     <p><label>
         {{i18n.PLAYER_2_NAME}}<br>
         <i class="material-icons">face</i>
-        <input type="text" maxlength="32" ng-model="player2Name" required>
+        <input type="text" maxlength="32" ng-model="$parent.player2Name" required>
       </label></p>
 
   </fieldset>
@@ -22,13 +22,13 @@
     <p><label>
         {{i18n.PLAYER_1_NAME}}<br>
         <i class="material-icons">face</i>
-        <input type="text" maxlength="32" ng-model="player1Name" required="required">
+        <input type="text" maxlength="32" ng-model="$parent.player1Name" required="required">
       </label></p>
 
     <p><label>
         {{i18n.AI_NAME}}<br>
         <i class="material-icons">memory</i>
-        <select ng-model="player2Name" ng-options="y for (x, y) in aIs"></select>
+        <select ng-model="$parent.player2Name" ng-options="y for (x, y) in aIs"></select>
       </label></p>
 
   </fieldset>
@@ -37,13 +37,13 @@
     <p><label>
         {{i18n.AI_1_NAME}}<br>
         <i class="material-icons">memory</i>
-        <select ng-model="player1Name" ng-options="y for (x, y) in aIs"></select>
+        <select ng-model="$parent.player1Name" ng-options="y for (x, y) in aIs"></select>
       </label></p>
 
     <p><label>
         {{i18n.AI_2_NAME}}<br>
         <i class="material-icons">memory</i>
-        <select ng-model="player2Name" ng-options="y for (x, y) in aIs"></select>
+        <select ng-model="$parent.player2Name" ng-options="y for (x, y) in aIs"></select>
       </label></p>
 
   </fieldset>
