Finished Human vs Human game
finished game logic, moving, and testing for victory

--- a/components/huvshu/huvshu.template.html
+++ b/components/huvshu/huvshu.template.html
@@ -3,7 +3,14 @@
 
   <h1>{{i18n.APP_TITLE}}</h1>
 
-  <hxp-board gametype="huvshu" gamedata="game"></hxp-board>
+  <hxp-board gametype="huvshu" 
+             gamedata="game" 
+             i18n="i18n" 
+             on-move="doMove(move)" 
+             on-repeat="initializeData()"
+             on-return-to-main-menu="returnToMainMenu()">
+
+  </hxp-board>
 
 </div>
 
