Hope and pray for peace in the repository

--- a/components/huvsai/huvsai.template.html
+++ b/components/huvsai/huvsai.template.html
@@ -17,7 +17,7 @@
     <hr>
     <h3>Tools</h3>
     <label for="boards-json">Boards JSON</label>
-    <textarea id="boards-json" ng-model="boards"></textarea>
+    <textarea id="boards-json" ng-model="boards" columns="80" rows="10"></textarea>
   </div>
 
 </div>
