--- a/components/welcome/welcome.template.html
+++ b/components/welcome/welcome.template.html
@@ -5,17 +5,17 @@
 
   <ul class="welcome_menu">
     <li>
-      <button ng-click="setupGame('HUMAN_VS_HUMAN')">
+      <button ng-click="setupGame('huvshu')">
         {{i18n.HUMAN_VS_HUMAN}}
       </button>
     </li>
     <li>
-      <button ng-click="setupGame('HUMAN_VS_AI')">
+      <button ng-click="setupGame('huvsai')">
         {{i18n.HUMAN_VS_AI}}
       </button>
     </li>
     <li>
-      <button ng-click="setupGame('AI_VS_AI')">
+      <button ng-click="setupGame('aivsai')">
         {{i18n.AI_VS_AI}}
       </button>
     </li>
