--- a/components/huvsai/huvsai.template.html
+++ b/components/huvsai/huvsai.template.html
@@ -1,31 +1,24 @@
 <div id="game-screen">
 
-
   <h1>{{i18n.APP_TITLE}}</h1>
 
-  <hxp-board gametype="huvsai"
+  <hxp-board gametype="gameType"
              gamedata="game"
              i18n="i18n"
              on-move="doMove(move)"
              on-ai-move="aiMove()"
-             on-repeat="initializeData()"
+             on-new-game="newGame()"
              on-return-to-main-menu="returnToMainMenu()">
 
   </hxp-board>
 
-  <div class="brain-display" ng-if="showBrain && game.players[game.currentPlayer].type === 'ai'">
+  <div class="brain-display">
     <hr>
-    <h4>{{game.players[game.currentPlayer].name}}'s Brain:</h4>
+    <h4>{{game.players['B'].name}}'s Brain:</h4>
     <hxp-brain i18n="i18n"
                player="player"
-               boards="boards">
+               learningstring="game.players['B'].learningStates">
   </div>
 
 </div>
 
-<p>
-  <a href="/hexapawn/hexapawn/#/">
-    <i class="material-icons">arrow_back</i>
-    {{i18n.RETURN_TO_MAIN_MENU}}
-  </a>
-  <a ng-click="toggleBrain()">*</a>
