--- a/components/setup/setup.template.html
+++ b/components/setup/setup.template.html
@@ -3,7 +3,7 @@
   <h1>{{i18n.APP_TITLE}}</h1>
   <h2>{{i18n.SETUP_GAME}}</h2>
 
-  <fieldset ng-if="gameType === 'HUMAN_VS_HUMAN'">
+  <fieldset ng-if="gameType === 'huvshu'">
     <p><label>
         {{i18n.PLAYER_1_NAME}}<br>
         <i class="material-icons">face</i>
@@ -18,7 +18,7 @@
 
   </fieldset>
 
-  <fieldset ng-if="gameType === 'HUMAN_VS_AI'">
+  <fieldset ng-if="gameType === 'huvsai'">
     <p><label>
         {{i18n.PLAYER_1_NAME}}<br>
         <i class="material-icons">face</i>
@@ -33,7 +33,7 @@
 
   </fieldset>
 
-  <fieldset ng-if="gameType === 'AI_VS_AI'">
+  <fieldset ng-if="gameType === 'aivsai'">
     <p><label>
         {{i18n.AI_1_NAME}}<br>
         <i class="material-icons">memory</i>
@@ -49,7 +49,6 @@
   </fieldset>
 
   <button ng-disabled="setupScreen.$invalid" ng-click="startGame()">{{i18n.START_GAME}}</button>
+  <button ng-click="returnToMainMenu()">{{i18n.RETURN_TO_MAIN_MENU}}</button>
 
 </form>
-
-<a href="/hexapawn/hexapawn/#/"><i class="material-icons">arrow_back</i>{{i18n.RETURN_TO_MAIN_MENU}}</a>
