--- a/components/huvsai/huvsai.template.html
+++ b/components/huvsai/huvsai.template.html
@@ -12,13 +12,13 @@
 
   </hxp-board>
 
-  <div class="brain-display">
-    <hr>
-    <h4>{{game.players['B'].name}}'s Brain:</h4>
-    <hxp-brain i18n="i18n"
-               player="player"
-               learningstring="game.players['B'].learningStates">
-  </div>
+  <!--  <div class="brain-display">
+      <hr>
+      <h4>{{game.players['B'].name}}'s Brain:</h4>
+      <hxp-brain i18n="i18n"
+                 player="player"
+                 learningstates="game.players['B'].learningStates">
+    </div>-->
 
 </div>
 
