added ngAudio and finished debugging AI vs AI

--- a/components/aivsai/aivsai.template.html
+++ b/components/aivsai/aivsai.template.html
@@ -7,7 +7,8 @@
              gamedata="game"
              i18n="i18n"
              on-move="doMove(move)"
-             on-repeat="newGame()"
+             on-ai-move="aiMove()"
+             on-new-game="newGame()"
              on-return-to-main-menu="returnToMainMenu()">
 
   </hxp-board>
