--- a/components/huvshu/huvshu.template.html
+++ b/components/huvshu/huvshu.template.html
@@ -7,7 +7,7 @@
              gamedata="game"
              i18n="i18n"
              on-move="doMove(move)"
-             on-repeat="newGame()"
+             on-new-game="newGame()"
              on-return-to-main-menu="returnToMainMenu()">
 
   </hxp-board>
