--- a/css/gameboard.css
+++ b/css/gameboard.css
@@ -11,6 +11,7 @@
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
+  overflow-y: auto;
 }
 
 #game-screen h1, #game-screen h2, #game-screen h3, #game-screen h4 {
