--- a/css/hexapawn.css
+++ b/css/hexapawn.css
@@ -29,14 +29,13 @@ h1, h2, h3, h4 {
 
 #app_screen {
   background: url(../assets/bg2.jpg) center center no-repeat;
-
   min-height: 100%;
   min-width: 100%;
   position: fixed;
-
   margin: 0em;
   left: 0em;
   top: 0em;
+  overflow-y: auto;
   text-align: center;
 }
 
