--- a/components/huvsai/huvsai.template.html
+++ b/components/huvsai/huvsai.template.html
@@ -22,6 +22,7 @@
   <hxp-show-logic ng-hide="showLogicPlayer == ''"
                   i18n ="i18n"
                   game="game"
+                  boards="showLogicBoards"
                   player="showLogicPlayer"
                   on-hide-logic="showLogicPlayer = ''" />
 
