--- a/css/moves.css
+++ b/css/moves.css
@@ -1,9 +1,9 @@
-#moves {
+.moves {
   width: 9em;
-  margin: auto;
+  margin: 0em auto;
 }
 
-#moves button {
+.moves button {
   color: white;
   border-radius: 0.3em;
   border: .1em solid #135a3c;
@@ -16,23 +16,23 @@
   height: 1.5em;
 }
 
-#moves button.move-0 {
+#game-screen .moves button.move-0 {
   background-color: #00ad00;
 }
 
-#moves button:hover {
+#game-screen .moves button:hover {
   border-color: yellow;
 }
 
-#moves button.move-1 {
+#game-screen .moves button.move-1 {
   background-color: #ff3a3a;
 }
 
-#moves button.move-2 {
+#game-screen .moves button.move-2 {
   background-color: #3a3aff;
 }
 
-#moves button.move-3 {
+#game-screen .moves button.move-3 {
   background-color: #ffff3a;
   background-color: #d4c900;
 }
