--- a/css/gameboard.css
+++ b/css/gameboard.css
@@ -1,5 +1,8 @@
 #game-screen {
   width: 50%;
+  min-height: 60%;
+  max-height: 80%;
+  overflow-y: auto;
   min-width: 13em;
   margin: 0 auto;
   background-color: #004c00;
@@ -11,7 +14,6 @@
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
-  overflow-y: auto;
 }
 
 #game-screen h1, #game-screen h2, #game-screen h3, #game-screen h4 {
@@ -61,7 +63,7 @@
   background: url(../assets/bg2.jpg) bottom center no-repeat;
 }
 
-#board-container {
+.board-container {
   background-color: green;
   width: 9em;
   height: 9em;
@@ -70,7 +72,7 @@
   background: url(../assets/textures/seamless-wood1.jpg) bottom right repeat;
 }
 
-#game-screen table {
+#game-screen .board-container .board {
   border-collapse: collapse;
   top:  -9em;
   float: clear;
@@ -142,6 +144,32 @@
   margin: auto;
 }
 
+hxp-show-logic {
+  background: transparent;
+  width: 100%;
+  overflow-y: auto;
+}
+
+#game-screen hxp-show-logic .board-container {
+  float: none;
+  margin: 0em 1em 1em;
+  font-size: 80%;
+}
+
+#game-screen hxp-show-logic .moves {
+  width: auto;
+  float: none;
+  padding:  0;
+  font-size: 80%;
+}
+
+#game-screen hxp-show-logic .moves button {
+  width: auto;
+  float: left;
+  padding: 0em 0.5em;
+  margin: 0em 0.5em 0em 0em;
+}
+
 /* Responsive media breaks */
 @media (max-width: 20em) and (max-height: 36em) {
   #game-screen {
@@ -170,10 +198,11 @@
     font-size: 80%;
   }
 
-  #board-container {
+  .board-container {
     float:left
   }
-  #moves, #game-over {
+
+  .moves, #game-over {
     float:right
   }
 }
@@ -185,12 +214,14 @@
 
   }
 
-  #board-container {
+  .board-container {
     float:left
   }
-  #moves, #game-over {
-    float:right
-  }
+
+}
+.moves, #game-over {
+  float:right
+}
 }
 
 
@@ -200,10 +231,11 @@
     font-size: 150%
   }
 
-  #board-container {
+  .board-container {
     float:left
   }
-  #moves, #game-over {
+
+  .moves, #game-over {
     float:right
   }
 }
@@ -216,7 +248,7 @@
     padding: 2em 6em;
   }
 
-  #board-container {
+  .board-container {
     float:left;
     font-size:130%;
   }
@@ -225,7 +257,7 @@
     font-size:75%;
   }
 
-  #moves, #game-over {
+  .moves, #game-over {
     float:right
   }
 
